# LLMaE-PPO

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  bc_model.pth  evaluate.py  format.py  llmae_ppo_generate_trajectories.ipynb  llmae_ppo_pre-train.py  main.py  plot_sample_efficiency.py  pyproject.toml  run_bc_training.py  trajectories.json
.github/workflows/: lint.yml  pre-commit.yml
Training_agent/: PPO_Example.py  networks.py  ppo.py
Training_agent/configs/agent/: ppo.yaml
Training_agent/multirun/2025-07-13/15-26-53/: multirun.yaml
Training_agent/multirun/2025-07-13/16-31-55/: multirun.yaml
Training_agent/multirun/2025-07-13/17-00-14/: multirun.yaml
Training_agent/multirun/2025-07-13/17-21-20/: multirun.yaml
Training_agent/multirun/2025-07-13/17-31-56/: multirun.yaml
llmae_ppo/: __init__.py  bc_train.py  env.py  env_wrapper.py  networks.py  ppo.py  ppo_agent.py  train.py  trainer.py  trajectory_generator.py  utils.py  visualize.py
llmae_ppo/configs/: bc.yaml  llmae_ppo.yaml  ppo.yaml  unlock_ppo.yaml  unlock_to_doorkey.yaml
llmae_ppo/trajectory_generation/: __init__.py  llm_agent.py  llm_interface.py  observation_parser.py  prompt_manager.py
multirun/2025-08-11/llmae_ppo/: multirun.yaml
multirun/2025-08-11/ppo/: multirun.yaml
multirun/2025-08-11/transfer_ppo/: multirun.yaml
notebooks/: llm_in_the_loop_demo.ipynb  llmae_ppo_generate_trajectories_duy_notebook.ipynb  one_shot_solver_demo.ipynb
pretrained_weights/: actor.pth  critic.pth
results/: summary_returns.csv  summary_success.csv
trajectory_data/: metadata.json  trajectories_seed0.pkl  trajectories_seed1.pkl  trajectories_seed10.pkl  trajectories_seed1000.pkl  trajectories_seed103.pkl  trajectories_seed107.pkl  trajectories_seed110.pkl  trajectories_seed116.pkl  trajectories_seed12.pkl  trajectories_seed127.pkl  trajectories_seed136.pkl  trajectories_seed14.pkl  trajectories_seed140.pkl  trajectories_seed141.pkl  trajectories_seed142.pkl  trajectories_seed144.pkl  trajectories_seed149.pkl  trajectories_seed15.pkl  trajectories_seed153.pkl  trajectories_seed154.pkl  trajectories_seed157.pkl  trajectories_seed164.pkl  trajectories_seed173.pkl  trajectories_seed175.pkl  trajectories_seed186.pkl  trajectories_seed189.pkl  trajectories_seed191.pkl  trajectories_seed195.pkl  trajectories_seed2.pkl  trajectories_seed201.pkl  trajectories_seed202.pkl  trajectories_seed207.pkl  trajectories_seed209.pkl  trajectories_seed21.pkl  trajectories_seed213.pkl  trajectories_seed22.pkl  trajectories_seed229.pkl  trajectories_seed233.pkl  trajectories_seed240.pkl  (+190 more)
trajectory_data_2/: trajectory_10_seed_0.pkl  trajectory_13_seed_0.pkl  trajectory_17_seed_0.pkl  trajectory_18_seed_0.pkl  trajectory_19_seed_0.pkl  trajectory_1_seed_0.pkl  trajectory_20_seed_0.pkl  trajectory_21_seed_0.pkl  trajectory_23_seed_0.pkl  trajectory_25_seed_0.pkl  trajectory_27_seed_0.pkl  trajectory_2_seed_0.pkl  trajectory_31_seed_0.pkl  trajectory_32_seed_0.pkl  trajectory_3_seed_0.pkl  trajectory_42_seed_0.pkl  trajectory_43_seed_0.pkl  trajectory_44_seed_0.pkl  trajectory_45_seed_0.pkl  trajectory_46_seed_0.pkl  trajectory_4_seed_0.pkl  trajectory_51_seed_0.pkl  trajectory_53_seed_0.pkl  trajectory_55_seed_0.pkl  trajectory_56_seed_0.pkl  trajectory_59_seed_0.pkl  trajectory_6_seed_0.pkl
weights/bc/: bc_model.pth
(+1912 files in other folders)
