[project]
name = "llmae-ppo"
version = "0.1.0"
description = "Final Project for Reinforcement Learning-Sose2025 at LUH"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.0",
    "matplotlib>=3.10.3",
    "minigrid>=3.0.0",
    "numpy>=2.3.1",
    "pillow>=11.3.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
    "tqdm",
    "ipykernel",
    "omegaconf",
    "hydra-core",
    "hydra-colorlog",
    "hydra-submitit-launcher",
    "moviepy",
    "rliable"
]

[dependency-groups]
dev = [
    "pytest>=4.6",
    "pytest-cov",
    "pytest-xdist",
    "pytest-timeout",
    "ruff",
    "pre-commit",
    "isort"
]

[tool.isort]
py_version = "311"
profile = "black"
src_paths = ["llmae_ppo"]
known_types = ["typing", "abc"] # We put these in their own section "types"
known_test = ["tests"]
known_first_party = ["llmae_ppo"]
skip_glob = ["__pycache__", ".venv"]
sections = [
    "FUTURE",
    "TYPES",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "TEST",
    "LOCALFOLDER",
] # section ordering
multi_line_output = 3 # https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html

[tool.pydocstyle]
convention = "numpy"
add-ignore = [ # http://www.pydocstyle.org/en/stable/error_codes.html
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary and description
    "D210", # No whitespaces allowed surrounding docstring text
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D400", # First line should end with a period
    "D401", # First line should be in imperative mood
    "D404", # First word of docstring should not be this
    "D413", # Missing blank line after last section
    "D415", # First line should end with a period, question mark, or exclamation point
]

[tool.ruff]
extend-exclude = []

[tool.ruff.lint]
ignore = [
  # Conflicts with the formatter
  "COM812", "ISC001"
]